2003-10-29  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* ruby-ext/lib/mhc-schedule.rb (MhcScheduleItem::init_by_string):
	Pass a regex as the first argment instead of a string.

	* ruby-ext/lib/mhc-palm.rb (PilotRecord::attribute_string): Remove
	a redundant space between method and a open brace.

	* mhc2ol.in (Period::get_duration): Use `nil?' for ruby-1.8.
	(Exporter::setup_ol_appointments): Don't use `$=' for ruby-1.8.
	(Exporter::export):  Don't use `=~' for ruby-1.8.
	($flag_category_regexp): Initialize with a Regexp object.

2003-10-14  Hiroya Murata <lapis-lazuli@pop06.odn.ne.jp> / nom

	* emacs/mhc-wl.el (mhc-wl-summary-mode-setup): Bind
	`wl-summary-lazy-highlight' and `wl-summary-lazy-update-mark' to nil. 

2003-10-13  Yoshinari Nomura  <nom@quickhack.net>

	* configure.rb: Change default path for gemcal xpm.

2003-10-13  Toshiaki Tanaka <toc@yan.ne.jp> / nom

	* emacs/mhc-vars.el (mhc-category-as-private): New variable.

	* emacs/mhc-summary.el (mhc-summary/insert-dayinfo):
	Use mhc-category-as-private.
	(mhc-summary-make-todo-list): Ditto.
	(mhc-summary-make-memo-list): Ditto.

2003-10-10  Yoshinari Nomura  <nom@quickhack.net>

	* emacs/mhc.el (mhc-edit): ask Alarm: if mhc-ask-alarm is non-nil.

	* emacs/mhc-vars.el (mhc-default-alarm, mhc-ask-alarm): New variables.

	* emacs/mhc-minibuf.el (mhc-alarm-hist): New variable.
	(mhc-input-alarm): New function.

	* emacs/mhc-guess.el (mhc-guess-location-regexp-list): brushup regexp.

	* emacs/mhc.el (mhc-version): New function.

	* emacs/mhc-vars.el (mhc-version): add version string.

	* emacs/mhc-guess.el, emacs/mhc-minibuf.el:
	Experimental implementation of guess-location.

2003-07-28  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* mhc2ol.in (Period.initialize): Carry over schedules which are
	later than 24:00.
	(Period.get_time): New method.
	(Exporter.setup_ol_appointments): Derive stime and etime out of
	period instead of sch.

2003-06-16  Hideyuki SHIRAI  <shirai@quickhack.net>
