@@ -1,3 +1,9 @@
+2003-11-03  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>
+
+	* ruby-ext/lib/mhc-date.rb (MhcTime::<=>): Verify that the types
+	are consistent.
+	(MhcDate::<=>): Ditto.
+
 2003-10-29  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>
 
 	* ruby-ext/lib/mhc-schedule.rb (MhcScheduleItem::init_by_string):
